Fixed spacing issues on accordion icon

--- a/assets/styles/dist.css
+++ b/assets/styles/dist.css
@@ -3318,6 +3318,10 @@ video {
   padding: 0.25rem;
 }
 
+.p-8 {
+  padding: 2rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -3402,6 +3406,14 @@ video {
 
 .pl-8 {
   padding-left: 2rem;
+}
+
+.pl-0 {
+  padding-left: 0px;
+}
+
+.pr-0 {
+  padding-right: 0px;
 }
 
 .text-left {
